[package]
name = "thread-id"
version = "4.2.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
license = "MIT/Apache-2.0"
readme = "readme.md"
keywords = ["thread", "pthread", "getcurrentthreadid"]
description = "Get a unique thread ID"
repository = "https://github.com/ruuda/thread-id"
documentation = "https://docs.rs/thread-id"

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2"
